--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/font-awesome.css" />
-  <!--<script type="application/javascript" charset="utf-8" src="js/service-worker.js"></script>-->
+  <script type="application/javascript" charset="utf-8" src="js/sw.js"></script>
   <title>Restaurant Reviews</title>
 </head>
 
