From Service Worker to Project Turn In

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/register.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4V-YYKBOR0v-IB97b2mCkaZb6ub77Bvg&libraries=places&callback=initMap"></script>
 
 
