--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/font-awesome.css" />
-  <script type="application/javascript" charset="utf-8" src="js/sw.js"></script>
+  <script type="application/javascript" charset="utf-8" src="/sw.js"></script>
   <title>Restaurant Reviews</title>
 </head>
 
