--- a/restaurant.html
+++ b/restaurant.html
@@ -19,7 +19,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul aria-label="BreadCrumb" id="breadcrumb" >
+    <ul id="breadcrumb" role="menubar" aria-label="BreadCrumb"  >
       <li><a aria-current="page" href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
